--- a/_posts/2016-04-17-so.md
+++ b/_posts/2016-04-17-so.md
@@ -48,7 +48,7 @@ The final step is to toss 151 master balls and pull all the .pngs down from the 
 
 ### Viewing your Pokedex
 
-The `iChooseYou` function is a simple wrapper to the `rasterImage` function in `base`. it takes a characcter string as an argument and finds the entry in pngList which matches it. it then takes all the data.frames at that point in the list and plots them with some preset vectors for sizing and positioning purposes.
+The `iChooseYou` function is a simple wrapper to the `rasterImage` function in `base`. It takes a characcter string as an argument and finds the entry in pngList which matches it. It then takes all the data.frames at that point in the list and plots them with some preset vectors for sizing and positioning purposes.
 
 ![plot of chunk unnamed-chunk-6]({{ site.github.url  }}/figure/unnamed-chunk-6-1.png)
 
