--- a/_posts/2016-04-17-so.md
+++ b/_posts/2016-04-17-so.md
@@ -76,4 +76,4 @@ This is all pretty obvious to anyone between the ages of 25 and 30, however it p
 
 If an aspiring Pokemon Master had to reduce the variety of the 5 defining charateristics down to something more manageable it was easy to think of the pokemon as either Speedy and Special, or Fat and Physical. The designs display this trait as well. All the skinny alien and ghostly things up top, and the solid rocky, animal like things at the bottom.
 
-P.S. PCA is really a fair amount more subtle than this simple description gives it credit. For a a more complete explanation have a look at [setosa.io](http://setosa.io/ev/principal-component-analysis/)
+P.S. PCA is really a fair amount more subtle than this simple description gives it credit. For a more complete explanation have a look at [setosa.io](http://setosa.io/ev/principal-component-analysis/)
