Finished Moar-Ridiculous post

--- a/Rmd/Moar-Ridiculous/Moar_Ridiculous.Rmd
+++ b/Rmd/Moar-Ridiculous/Moar_Ridiculous.Rmd
@@ -6,14 +6,14 @@ date: 2016-05-03
 
 Let's do some training and apply some new tools to this code!
 
-# A smarter pokedex
+## A smarter pokedex
 
 Hadley Wickham has released a package called [rvest](https://cran.r-project.org/web/packages/rvest/index.html) since dsparks initial study, so we'll use that to pull the data.
 
 ```{r load data}
 library(rvest)
 
-baseStats_Gen1 <- 
+baseStats <- 
   read_html(
     x = "http://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_base_stats_(Generation_I)"
     ) %>% 
@@ -23,34 +23,34 @@ baseStats_Gen1 <-
   html_table()
 ```
 
-The [rvest](https://cran.r-project.org/web/packages/rvest/vignettes/selectorgadget.html) documentation suggests using [SelectorGadget](http://selectorgadget.com/), a webtool for brekaing down web pages by css. I did use this initially, but found that the item classes in this case (e.g "div table") was an acceptable argument whereas with the point and click interface the suggestion was infact ".jquery-tablesorter". This returned an error when run however.
+The [rvest](https://cran.r-project.org/web/packages/rvest/vignettes/selectorgadget.html) documentation suggests using [SelectorGadget](http://selectorgadget.com/), a web tool for breaking down web pages by css. I did use this initially, but found that the item classes in this case (e.g "div table") was an acceptable argument whereas with the point and click interface the suggestion was in fact ".jquery-tablesorter". This returned an error when run however.
 
-The funny `%>%` operators are 'pipes', initally created in the [magrittr](http://www.r-statistics.com/2014/08/simpler-r-coding-with-pipes-the-present-and-future-of-the-magrittr-package/) package, Hadley uses them exensivly in the [Hadleyverse](http://adolfoalvarez.cl/the-hitchhikers-guide-to-the-hadleyverse/) as they prevent nesting functions and have a straightforward left to right syntax.
+The funny `%>%` operators are 'pipes', initially created in the [magrittr](http://www.r-statistics.com/2014/08/simpler-r-coding-with-pipes-the-present-and-future-of-the-magrittr-package/) package, Hadley uses them extensively in the [Hadleyverse](http://adolfoalvarez.cl/the-hitchhikers-guide-to-the-hadleyverse/) as they prevent nesting functions and have a straightforward left to right syntax.
 
 So, in a three command one liner we've read the data straight through into a workable `data.frame` format. However, [data.tables](https://cran.r-project.org/web/packages/data.table/index.html) are faster to work with, so lets convert it and fix up those headers.
 
 ```{r data munging}
 library(data.table)
 
-baseStats_Gen1 <- as.data.table(baseStats_Gen1)
+baseStats <- as.data.table(baseStats)
 
-baseStats_Gen1[, "" := NULL] # Remove second col with only "NA"
-setnames(baseStats_Gen1, 1:2, c("DexNo", "Pokemon")) # Rename cols 1 and 2 to something workable
+baseStats[, "" := NULL] # Remove second col with only "NA"
+setnames(baseStats, 1:2, c("DexNo", "Pokemon")) # Rename cols 1 and 2 to something workable
 ```
 
 The first line uses the `data.table` native assignment operator `:=` to assign a value of `NULL`, effectively deleting it. `setnames` is one of the many `set*` family functions which assign in place, without copying a new object, modifying that in RAM, and deleting the original. This is more memory efficient and faster. Not necessarily needed for data at this scale, but doesn't hurt either.
 
-# A better pokeball
+## A better pokeball
 
 The method to grab the urls for each image was pretty complex before. This method refines two areas.
 
-* Has no dependancy on custom gists to modify strings (neat though they are)
+* Has no dependency on custom gists to modify strings (neat though they are)
 * More efficiently identifies urls by using `html_nodes` and not needing to scrape the full webpage transcript
 
 ```{r images}
 library(stringr)
 
-baseStats_Gen1[, imgURL := read_html(
+baseStats[, imgURL := read_html(
     x = "http://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_base_stats_(Generation_I)"
     ) %>% 
   html_nodes(
@@ -65,10 +65,55 @@ baseStats_Gen1[, imgURL := read_html(
     n = 2) %>% .[,1]]
 ```
 
-This code also uses the `stringr` package to split the strings down at fixed points, returning consice urls via `string_split_fixed` which looks for specific characters and chops them into 2 values at that point. By calling all of this within the data.table we just assign it into each row in order.
+This code also uses the `stringr` package to split the strings down at fixed points, returning concise urls via `string_split_fixed` which looks for specific characters and chops them into 2 values at that point. By calling all of this within the data.table we just assign it into each row in order.
 
-```{r png}
-library(RCurl)
+To grab the actual pngs I initially played around a lot with calling `readPNG(getURLContent(...))` in the data.table  in a form like: `baseStats[, readPNG(getURLContent(imgURL))]`, . However after many failures I realised that data.table wasn't playing with `getURLContent()` well, as it needed to open a different connection for each Pokemon. So I've left this part out. If anyone has any suggestions please get in touch (on Github I guess, I haven't got commenting up on here yet >.> <.<;)
 
-baseStats_Gen1[, getURLContent(imgURL)]
+## Gotta plot 'em all
+
+To create the PCA model we can call it from our new data.table
+
+```{r PCA}
+pokemonPCA <- prcomp(baseStats[, .(HP, Attack, Defense, Speed, Special)])
+```
+
+Outside of the base plots a more pleasant graphing package is available for biplots based on the ggplot approach
+
+```{r ggbiplot}
+# devtools::install_github("vqv/ggbiplot")
+
+library(ggbiplot)
+
+ggbiplot(pokemonPCA, labels = baseStats$Pokemon)
+```
+
+This functions actually has a number of neat 'ggplot-like' features. One of which is grouping by factor. The most obvious factors in pokemon are thier type classifications, so lets get that data.
+
+```{r type}
+pageTables <- 
+  read_html(
+    x = "http://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_Kanto_Pok%C3%A9dex_number"
+    ) %>% 
+  html_nodes(
+    css = "div table"
+    )
+
+pokeType <- html_table(pageTables[c(2,3,4)]) %>%
+  rbindlist()
+
+setnames(pokeType, 6, "Type2")
+pokeType[, DualType := paste(Type, Type2)]
+```
+
+Here I use the same httr approach as before, but allow multiple nodes to be returned, giving me 7 "div table" nodes. I then subset down to the useful ones within `html_table`, which gives me a list of 3 data.frames, and collapse them all down to one with a call to data.tables `rbindlist`. 
+
+```{r ggbiplot2}
+ggbiplot(pokemonPCA, labels = baseStats$Pokemon, groups = pokeType$Type) +
+  ggtitle("Pokemon Gen1 PCA by Primary Type")
+
+ggbiplot(pokemonPCA, labels = baseStats$Pokemon, groups = pokeType$Type2) +
+  ggtitle("Pokemon Gen1 PCA by Secondary Type")
+
+ggbiplot(pokemonPCA, labels = baseStats$Pokemon, groups = pokeType$DualType) +
+  ggtitle("Pokemon Gen1 PCA by Combined Type")
 ```
