--- a/_source/your-code-evolved/2016-05-25-your-code-evolved.Rmd
+++ b/_source/your-code-evolved/2016-05-25-your-code-evolved.Rmd
@@ -1,9 +1,7 @@
 ---
 layout: post
 title:  Your code evolved
-date: `r Sys.time()`
-published: true
-tags: [example1, example2]
+date: 2016-05-25
 ---
 
 Let's do some training and apply some new tools to this code!
